# reView

./: .gitignore  Cargo.toml  README.org  dagger.json  review.service
.github/workflows/: compile.yaml
client/: Cargo.toml
client/src/: config.rs  main.rs
client/src/connection/: mod.rs  video.rs
client/src/connection/ssh/: keys.rs  mod.rs
client/src/display/: mod.rs
client/src/start/: mod.rs
dagger/: go.mod  main.go
server/: Cargo.toml
server/src/: connection.rs  lib.rs  main.rs
server/src/config/: device.rs  mod.rs  server.rs
server/src/config/version/: mod.rs
server/src/connection/: mod.rs  video.rs
server/src/connection/ssh/: mod.rs
server/src/device/: connection.rs  mod.rs  process.rs  reading.rs
server/src/framebuffer/: mod.rs  process.rs
server/src/version/: mod.rs  tests.rs
