[package]
name = "review-server"
version = "0.1.0"
authors = ["Fabian Weik <fabian.weik@protonmail.com>"]
license = "GPL-3.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread"] }
libremarkable = { version = "0.7", features = [ "input" ], default-features = false }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
anyhow = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
test-log = { version = "0.2.19", features = ["trace"] }
lz4_flex = "0.12.0"
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
bson = { version = "3.1.0", features = ["serde"] }
procfs = "0.18.0"
itertools = "0.14.0"
