[package]
name = "review-server"
version = "0.1.0"
authors = ["Fabian Weik <fabian.weik@protonmail.com>"]
license = "GPL-3.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "time"] }
libremarkable = { version = "0.7", features = ["input"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
test-log = { version = "0.2.19", features = ["trace"] }
lz4_flex = { version = "0.12.0", features = ["frame"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
procfs = "0.18.0"
itertools = "0.14.0"
ssh-key = { version = "0.6.7", features = ["p256", "p384", "p521", "dsa", "ed25519", "rsa", "serde"] }
